# Heatmap

./: .gitignore  README.md  local_history.patch
app/: admin.py  billboard.py  constants.py  crypto.py  demo.py  enclave.py  requirements.txt  user.py  user_db.json  user_list.json
docker/: Dockerfile  docker-compose.yml
enclave/: Makefile
enclave/app/: Cargo.toml  build.rs
enclave/app/src/: main.rs  ocalls_u.rs  oram.rs  tmp
enclave/app/src/attestation/: service.rs
enclave/app/src/common_u/: errors.rs  types.rs
enclave/app/src/esgx/: equote.rs  general.rs
enclave/app/src/networking/: ipc_listener.rs  messages.rs
enclave/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
enclave/enclave/src/: auto_ffi.rs  heatmap.rs  lib.rs  multipart_data.rs  storage.rs  traits.rs  types.rs  user_db.rs
enclave/enclave/src/crypto/: asymmetric.rs  hash.rs  mod.rs  rand.rs  symmetric.rs
scripts/: build.sh  run.sh  run_enclave_sim.sh  run_ganache.sh
solidity/: Heatmap.sol  compile_sol.sh
