[package]
name = "heatmap-app"
version = "1.0.0"
authors = ["Nerla", "The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

futures = { version = "0.1.25", default-features = false }
tokio-zmq = "0.9.0"
zmq = "0.9.0"
failure = "0.1.3"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "0.14.0"
rustc-hex = "1.0.0"
lazy_static = "1.3.0"
log = "0.4.6"
dirs = "1.0.4"


# Needed for remote attestation with IAS (Intel Attestation Service)
base64 = "0.10.0"
log-derive = "0.3"
openssl = "0.10"
openssl-sys = "0.9"
percent-encoding = "2.1.0"
reqwest = "0.9.5"

[patch.'https://github.com/baidu/rust-sgx-sdk.git']
sgx_alloc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_alloc" }
sgx_build_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_build_helper" }
sgx_cov = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_cov" }
sgx_crypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_crypto_helper" }
sgx_libc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_libc" }
sgx_rand = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand" }
sgx_rand_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand_derive" }
sgx_serialize = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize" }
sgx_serialize_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tdh" }
sgx_tkey_exchange = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tprotected_fs" }
sgx_trts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_trts" }
sgx_tse = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tse" }
sgx_tseal = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tseal" }
sgx_tstd = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tstd" }
sgx_tunittest = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tunittest" }
sgx_types = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_types" }
sgx_ucrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_ucrypto" }
sgx_unwind = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_unwind" }
sgx_urts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_urts" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_alloc" }
sgx_build_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_build_helper" }
sgx_cov = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_cov" }
sgx_crypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_crypto_helper" }
sgx_libc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_libc" }
sgx_rand = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand" }
sgx_rand_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand_derive" }
sgx_serialize = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize" }
sgx_serialize_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tdh" }
sgx_tkey_exchange = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tprotected_fs" }
sgx_trts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_trts" }
sgx_tse = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tse" }
sgx_tseal = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tseal" }
sgx_tstd = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tstd" }
sgx_tunittest = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tunittest" }
sgx_types = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_types" }
sgx_ucrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_ucrypto" }
sgx_unwind = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_unwind" }
sgx_urts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_urts" }

[patch.'https://github.com/mesalock-linux/serde-sgx.git']
serde = {git = "https://github.com/njeans/serde-sgx.git"}
serde_derive = {git = "https://github.com/njeans/serde-sgx.git"}

[patch.'https://github.com/mesalock-linux/serde-json-sgx.git']
serde_json = {git = "https://github.com/njeans/serde-json-sgx.git"}

[patch.crates-io]
serde = {  git = "https://github.com/njeans/serde.git"}
serde_json = { git = "https://github.com/njeans/serde_json.git"}
